--- a/p3/css/main.css
+++ b/p3/css/main.css
@@ -36,16 +36,16 @@ img {
   width: 100%;
 }
 p {
-
+  font-family: Timesnewroman;
 }
 h1 {
-
+  font-family: Timesnewroman;
 }
 h2 {
-
+  font-family: Timesnewroman;
 }
 h3 {
-
+  font-family: Timesnewroman;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -64,7 +64,23 @@ h3 {
     margin-left: 22.5vw;
   }
 }
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 768px) {
+  .column1, .column2{
+    width: 100%;
+    margin: 0;
+  }
+  .image-padding {
+    margin-bottom: 10px;
+  }
+  .columnheader {
+    text-align: center;
+  }
+  img {
+    width: 50%;
+    margin-left: 22.5vw;
+  }
+}
+@media only screen and (max-width: 320px) {
   .column1, .column2{
     width: 100%;
     margin: 0;
