--- a/p3/css/main.css
+++ b/p3/css/main.css
@@ -11,9 +11,17 @@ body {
 .hero {
   background: url(../img/flag1.jpg)
   no-repeat center center;
-  background-size: cover;
+  background-size: contain;
   height: 600px;
-  margin-bottom: 100px;
+  margin-bottom: 55px;
+  background-color: rgb(158, 0, 16);
+}
+.page-title {
+
+}
+.page-intro {
+  width: calc(100% - 50px);
+  padding-bottom: 90px;
 }
 .columnheader {
   text-align: left;
@@ -36,18 +44,29 @@ img {
   width: 100%;
 }
 p {
-  font-family: Timesnewroman;
+  font-family: Garamond;
+  font-weight: 500;
 }
 h1 {
-  font-family: Timesnewroman;
+  font-family: Garamond;
+  font-size: 30px;
 }
 h2 {
-  font-family: Timesnewroman;
+  font-family: Garamond;
 }
 h3 {
-  font-family: Timesnewroman;
+  font-family: Garamond;
+  font-size: 21px;
 }
 
+@media only screen and (min-width: 1440px) {
+  .column1, .column2{
+
+  }
+  p {
+    font-size: 20px;
+  }
+}
 @media only screen and (max-width: 1024px) {
   .column1, .column2{
     width: 100%;
@@ -62,6 +81,9 @@ h3 {
   img {
     width: 50%;
     margin-left: 22.5vw;
+  }
+  p {
+    font-size: 20px;
   }
 }
 @media only screen and (max-width: 768px) {
@@ -94,5 +116,8 @@ h3 {
   img {
     width: 50%;
     margin-left: 22.5vw;
+  }
+  p {
+    font-size: 18px;
   }
 }
