--- a/p3/css/main.css
+++ b/p3/css/main.css
@@ -17,14 +17,24 @@ body {
   background-color: rgb(158, 0, 16);
 }
 .page-title {
-
+  font-family: Garamond;
+  font-size: 32px;
+}
+.intro-title {
+  font-family: Garamond;
+  font-size: 32px;
 }
 .page-intro {
   width: calc(100% - 50px);
   padding-bottom: 90px;
 }
 .columnheader {
+  font-family: Garamond;
+  font-size: 35px;
   text-align: left;
+}
+.columnheader1 {
+  display: none;
 }
 .column1 {
   width: calc(25% - 50px);
@@ -34,8 +44,11 @@ body {
 .image-padding {
   margin-bottom: 110px;
 }
+.image-padding1 {
+  display: none;
+}
 .column2 {
-  width: calc(75% - 50px);
+  width: calc(65% - 50px);
   float: left;
   margin: 0 0 0 50px;
   padding-bottom: 100px;
@@ -45,79 +58,179 @@ img {
 }
 p {
   font-family: Garamond;
+  font-size: 20px;
   font-weight: 500;
+  line-height: 34px;
+}
+.intro-font {
+  font-family: Garamond;
+  font-size: 25px;
+  line-height: 36px;
 }
 h1 {
   font-family: Garamond;
-  font-size: 30px;
+  font-size: 32px;
 }
 h2 {
   font-family: Garamond;
+  font-size: 25px;
 }
 h3 {
   font-family: Garamond;
-  font-size: 21px;
+  font-size: 22.5px;
 }
-
 @media only screen and (min-width: 1440px) {
-  .column1, .column2{
-
-  }
-  p {
-    font-size: 20px;
+  .column2 {
+    display: block;
   }
 }
 @media only screen and (max-width: 1024px) {
-  .column1, .column2{
+  .column1 {
+    display: none;
+  }
+  .column2 {
     width: 100%;
     margin: 0;
   }
   .image-padding {
     margin-bottom: 10px;
   }
-  .columnheader {
-    text-align: center;
+  .image-padding1 {
+    display: block;
+    padding-bottom: 10px;
+  }
+  .columnheader1 {
+    display: block;
+    font-size: 21px;
+    padding-bottom: 10px;
+    text-align: left;
+  }
+  .intro-title {
+    font-size: 33px;
+  }
+  .page-intro {
+    width: calc(100% - 20px);
+    padding-bottom: 3px;
+  }
+  .intro-font {
+    font-size: 26px;
+    line-height: 40px;
   }
   img {
     width: 50%;
     margin-left: 22.5vw;
   }
+  h1 {
+    font-size: 32px
+  }
+  h2 {
+    font-size: 29px
+  }
+  h3 {
+    font-size: 26px
+  }
   p {
-    font-size: 20px;
+    font-size: 23px;
+    line-height: 37px;
   }
 }
 @media only screen and (max-width: 768px) {
-  .column1, .column2{
+  .column1 {
+    display: none;
+  }
+  .column2 {
     width: 100%;
     margin: 0;
   }
   .image-padding {
     margin-bottom: 10px;
   }
-  .columnheader {
-    text-align: center;
+  .image-padding1 {
+    visibility: visible;
+    padding-bottom: 10px;
+  }
+  .columnheader1 {
+    visibility: visible;
+    font-size: 21px;
+    padding-bottom: 10px;
+    text-align: left;
+  }
+  .intro-title {
+    font-size: 28px;
+  }
+  .page-intro {
+    width: calc(100% - 20px);
+    padding-bottom: 3px;
+  }
+  .intro-font {
+    font-size: 22px;
+    line-height: 33px;
   }
   img {
     width: 50%;
     margin-left: 22.5vw;
+  }
+  h1 {
+    font-size: 26.5px
+  }
+  h2 {
+    font-size: 23px
+  }
+  h3 {
+    font-size: 21px
+  }
+  p {
+    font-size: 20px;
+    line-height: 32px;
   }
 }
 @media only screen and (max-width: 320px) {
-  .column1, .column2{
+  .column1 {
+    display: none;
+  }
+  .column2 {
     width: 100%;
     margin: 0;
   }
   .image-padding {
-    margin-bottom: 10px;
+    padding-bottom: 10px;
   }
-  .columnheader {
-    text-align: center;
+  .image-padding1 {
+    visibility: visible;
+    padding-bottom: 10px;
+  }
+  .columnheader1 {
+    visibility: visible;
+    font-size: 21px;
+    padding-bottom: 10px;
+    text-align: left;
+  }
+  .intro-title {
+    font-size: 22px;
+  }
+  .page-intro {
+    width: calc(100% - 5px);
+    padding-bottom: 3px;
+  }
+  .intro-font {
+    font-size: 18px;
+    line-height: 25px;
   }
   img {
-    width: 50%;
-    margin-left: 22.5vw;
+    width: 60%;
+    margin-left: 17vw;
+  }
+  h1 {
+    font-size: 21px
+  }
+  h2 {
+    font-size: 19px
+  }
+  h3 {
+    font-size: 17.5px
   }
   p {
-    font-size: 18px;
+    font-size: 17px;
+    line-height: 29px;
   }
 }
